[package]
name = "privacyscreen"
version = "1.0.0"
edition = "2024"

[dependencies]
winit = { version = "0.30", features = ["rwh_06", "x11"] }
softbuffer = "0.4.8"
ctrlc = "3.5.1"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }
x11 = "2.21.0"
