[package]
name = "privacyscreen"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "privscrn"
path = "src/privscrn.rs"

[dependencies]
winit = { version = "0.30", features = ["rwh_06", "x11"] }
softbuffer = "0.4.8"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5.1"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"
